// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";
option objc_class_prefix = "HLW";
option go_package = "git.tecnospeed.local/tecnospeed/facilitador/nfse-nacional/protobuf/model-nfse";

package model;

// The greeting service definition.
service Model {
  // Sends a greeting
  rpc createUser(CreateUserRequest) returns(CreateUserReply) { }
  rpc healthCheck(HealthCheckRequest) returns(HealthCheckReply) { }
}

// The request message containing the json.
message CreateUserRequest {
  string token = 1;
  string usuario = 2;
  string senha = 3;
}

// The response message containing the greetings
message CreateUserReply {
  string message = 1;
}

// The request message with no parameter.
message HealthCheckRequest {

}

// The response message containing the greetings
message HealthCheckReply {
  int32 message = 1;
}